fixed css gap issues

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,5 @@
 footer {
-  box-sizing: border-box;
-  display: block;
+  box-sizing: content-box;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   padding: 0;
